== 1.0.0

* Major changes
 * [link] and other url related zafu tags ([form]) *do not typecast to String* by default:
   you need to use <r:link foo='%{baz}'/> for literal values.
 * Created "uv" brick to support ultraviolet syntax highlighting.
 * Created 'acl' brick to support Access Control Lists.

* Minor changes
 * Fixed login redirect to not leave ssh.
 * Fixed 'root' scoping and custom urls with mode ('_' in url).
 * Fixed 'host' option for zazen, link and img tags.
 * Fixed [url] method to properly include port number and protocol (https).
 * Improved properties and relations managment interfaces.
 * Improved capistrano tasks on site rename.
 * Fixed a bug where cached_role_ids would not be recalculated on rebuild rebuild.
 * Fixed type_cast bug on Time value.
 * Fixed a bug in 'is_ancestor?' where it would be confused by similar ids.
 * Fixed a bug with 'find(22)' (find by literal zip).
 * Fixed ajax bugs for edge cases ([add] + [drop], etc).
 * Fixed security in ACL when using t_url Ajax.

== 1.0.0.rc3 2011-05-26

* Major changes
 * Included tag in xml serialization (tag_names)
 * Added export/import support for Roles/Columns and Relations.
 * Fixed bugs when changing class hierarchy (move rename VirtualClass).
 * Fixed many small bugs and issues (indexing, link date, missed errors, etc).
 * Fixed block edit with ajax ([edit] method).
 * Removed fulltext search (no more MyISAM tables).
 * Fixed SQLiss scoping in queries like "Job:project" (added kpath filter).
 * Fixed Zafu calendar and timezones in dates.
 * Added 'foreach' method (paginated looping in SQLiss query) for console.
 * Added 'count' method (count objects with SQLiss query) for console.
 * Added support for scripts with Zena::Console.
 * Added support for "select" and "having" in SQLiss.
 * Added button to create specialized skin for current page in dev_box.
 * Added 'query_errors' to report dynamic query errors.
 * Created a basic admin interface (backend).